[gd_scene load_steps=17 format=3 uid="uid://co44hxd7jbcjs"]

[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="1_ji0pe"]
[ext_resource type="Script" path="res://src/ui/components/menu/menu.gd" id="2_cgghr"]
[ext_resource type="PackedScene" uid="uid://cfuskyu58uo2v" path="res://src/ui/components/settings/settings.tscn" id="3_1stdy"]
[ext_resource type="PackedScene" uid="uid://bp6yn0qw2s6ua" path="res://src/ui/components/discover/discover.tscn" id="4_5qyiw"]
[ext_resource type="PackedScene" uid="uid://dkqc3of3acx2i" path="res://src/ui/components/map/map.tscn" id="4_jtsir"]
[ext_resource type="Shader" path="res://src/ui/components/menu/menu_rainbow.gdshader" id="5_k4wpn"]
[ext_resource type="ButtonGroup" uid="uid://73odg1nwdkof" path="res://src/ui/components/menu/button_group_menu_tabs.tres" id="8_ao4hb"]
[ext_resource type="PackedScene" uid="uid://c8dlajk0at8no" path="res://src/ui/components/backpack/backpack.tscn" id="8_d38wp"]
[ext_resource type="PackedScene" uid="uid://ospn0xlkak6m" path="res://src/ui/components/vertical_icon_button/vertical_icon_button.tscn" id="9_7vo8e"]
[ext_resource type="Texture2D" uid="uid://ck0o5otm5qv8k" path="res://assets/ui/nav-bar-icons/explorer-off.svg" id="10_ly37h"]
[ext_resource type="Texture2D" uid="uid://in6jrkrtptfk" path="res://assets/ui/nav-bar-icons/explorer-on.svg" id="11_gl688"]
[ext_resource type="Texture2D" uid="uid://3w81orc6dom3" path="res://assets/ui/nav-bar-icons/backpack-off.svg" id="12_jqiqu"]
[ext_resource type="Texture2D" uid="uid://6imcvlsym60g" path="res://assets/ui/nav-bar-icons/backpack-on.svg" id="13_dwe06"]
[ext_resource type="Texture2D" uid="uid://3hwotq2y3fji" path="res://assets/ui/nav-bar-icons/settings-off.svg" id="14_k81tr"]
[ext_resource type="Texture2D" uid="uid://btbdt48fn6ys1" path="res://assets/ui/nav-bar-icons/settings-on.svg" id="15_uduxr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t4bn8"]
shader = ExtResource("5_k4wpn")
shader_parameter/strength = 0.9
shader_parameter/speed = 0.025
shader_parameter/angle = 0.0

[node name="Control_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme = ExtResource("1_ji0pe")
script = ExtResource("2_cgghr")
group = ExtResource("8_ao4hb")

[node name="ColorRect_Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.85098, 0.843137, 0.866667, 1)

[node name="Control_Discover" parent="ColorRect_Background" instance=ExtResource("4_5qyiw")]
visible = false
layout_mode = 1

[node name="Control_Settings" parent="ColorRect_Background" instance=ExtResource("3_1stdy")]
layout_mode = 1

[node name="Control_Map" parent="ColorRect_Background" instance=ExtResource("4_jtsir")]
visible = false
layout_mode = 1
offset_top = 61.0
offset_bottom = -1.0

[node name="Control_Backpack" parent="ColorRect_Background" instance=ExtResource("8_d38wp")]
visible = false
layout_mode = 1

[node name="ColorRect_Header" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 59.0
grow_horizontal = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 1)

[node name="ColorRect_Separator" type="ColorRect" parent="ColorRect_Header"]
material = SubResource("ShaderMaterial_t4bn8")
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer_ButtonsPanel" type="HBoxContainer" parent="ColorRect_Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.5
offset_top = -20.0
offset_right = 117.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_constants/separation = 50

[node name="IconButton_Discover" parent="ColorRect_Header/HBoxContainer_ButtonsPanel" instance=ExtResource("9_7vo8e")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
icon_unpressed = ExtResource("10_ly37h")
icon_pressed = ExtResource("11_gl688")
label_value = "EXPLORER"

[node name="IconButton_Map" parent="ColorRect_Header/HBoxContainer_ButtonsPanel" instance=ExtResource("9_7vo8e")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="IconButton_Backpack" parent="ColorRect_Header/HBoxContainer_ButtonsPanel" instance=ExtResource("9_7vo8e")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
icon_unpressed = ExtResource("12_jqiqu")
icon_pressed = ExtResource("13_dwe06")
label_value = "BACKPACK"

[node name="IconButton_Settings" parent="ColorRect_Header/HBoxContainer_ButtonsPanel" instance=ExtResource("9_7vo8e")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
icon_unpressed = ExtResource("14_k81tr")
icon_pressed = ExtResource("15_uduxr")
label_value = "SETTINGS"

[node name="Button_Discover" type="Button" parent="ColorRect_Header/HBoxContainer_ButtonsPanel"]
visible = false
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"ButtonFlat_Tab"
disabled = true
toggle_mode = true
button_group = ExtResource("8_ao4hb")
text = "Discover"

[node name="Button_Map" type="Button" parent="ColorRect_Header/HBoxContainer_ButtonsPanel"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"ButtonFlat_Tab"
toggle_mode = true
button_group = ExtResource("8_ao4hb")
text = "Map"

[node name="Button_Backpack" type="Button" parent="ColorRect_Header/HBoxContainer_ButtonsPanel"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"ButtonFlat_Tab"
toggle_mode = true
button_group = ExtResource("8_ao4hb")
text = "My Profile"

[node name="Button_Settings" type="Button" parent="ColorRect_Header/HBoxContainer_ButtonsPanel"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"ButtonFlat_Tab"
toggle_mode = true
button_group = ExtResource("8_ao4hb")
text = "Settings"

[node name="Button_Profile" type="Button" parent="ColorRect_Header/HBoxContainer_ButtonsPanel"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"ButtonFlat_Tab"
toggle_mode = true
button_group = ExtResource("8_ao4hb")
text = "Profile"

[node name="Button_Close" type="Button" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -77.0
offset_top = 18.0
offset_right = -27.0
offset_bottom = 41.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "CLOSE"

[connection signal="preview_hot_reload" from="ColorRect_Background/Control_Settings" to="." method="_on_control_settings_preview_hot_reload"]
[connection signal="request_debug_panel" from="ColorRect_Background/Control_Settings" to="." method="_on_control_settings_request_debug_panel"]
[connection signal="request_pause_scenes" from="ColorRect_Background/Control_Settings" to="." method="_on_control_settings_request_pause_scenes"]
[connection signal="pressed" from="ColorRect_Header/HBoxContainer_ButtonsPanel/Button_Discover" to="." method="_on_button_discover_pressed"]
[connection signal="pressed" from="ColorRect_Header/HBoxContainer_ButtonsPanel/Button_Map" to="." method="_on_button_map_pressed"]
[connection signal="pressed" from="ColorRect_Header/HBoxContainer_ButtonsPanel/Button_Backpack" to="." method="_on_button_backpack_pressed"]
[connection signal="pressed" from="ColorRect_Header/HBoxContainer_ButtonsPanel/Button_Settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="ColorRect_Header/HBoxContainer_ButtonsPanel/Button_Profile" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="Button_Close" to="." method="_on_button_close_pressed"]
